--- a/my-app/client/public/index.html
+++ b/my-app/client/public/index.html
@@ -12,11 +12,11 @@
     gtag('config', 'G-94RQYQXZ88');
   </script>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/logo3.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="Venta de huevos del país. Frescos diariamente de la granja a tu casa." />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo3.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
