--- a/my-app/client/public/index.html
+++ b/my-app/client/public/index.html
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Huevo Express PR</title>
+  <title>Huevos Express PR</title>
 </head>
 
 <body>
