--- a/my-app/client/public/index.html
+++ b/my-app/client/public/index.html
@@ -12,6 +12,10 @@
     gtag('config', 'G-94RQYQXZ88');
   </script>
   <meta charset="utf-8" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+
   <link rel="icon" href="%PUBLIC_URL%/logo3.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
