--- a/my-app/client/public/index.html
+++ b/my-app/client/public/index.html
@@ -11,6 +11,21 @@
 
     gtag('config', 'G-94RQYQXZ88');
   </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17075188600"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17075188600');
+  </script>
+  <script>
+    gtag('config', 'AW-17075188600/jGLACJSMy-4aEPjmis4_', {
+      'phone_conversion_number': '(787) 922-1754'
+    });
+  </script>
+
   <meta charset="utf-8" />
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
