--- a/my-app/client/public/index.html
+++ b/my-app/client/public/index.html
@@ -66,6 +66,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script>
+    window.addEventListener("load", function () {
+      if (document.location.href.indexOf("/thankyou") != -1) {
+        gtag("event", "conversion", {
+          send_to: "AW-17075188600/5Y7-CLKlzO4aEPjmis4_",
+        })
+      }
+    })
+  </script>
+
 </body>
 
 </html>
